--- a/src/RemindersForTopEleven/MainWindow.xaml
+++ b/src/RemindersForTopEleven/MainWindow.xaml
@@ -9,24 +9,48 @@
         x:Name="WindowsMainPage">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="5"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="5"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button Content="Прочитать файлы" Click="ButtonReadFile_Click"/>
-            <Separator Width="5" Background="{x:Null}"/>
-            <Button Content="Отравить сообщение" Click="ButtonSendMessage_Click"/>
-        </StackPanel>
+        <Grid Grid.Row="1" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal">
+                <Border Margin="2">
+                    <Button Content=" Прочитать файлы " Click="ButtonReadFile_Click"/>
+                </Border>
+                <Separator Width="5" Background="{x:Null}"/>
+                <Border Margin="2">
+                    <Button Content=" Отравить сообщение " Click="ButtonSendMessage_Click"/>
+                </Border>
+            </StackPanel>
+        </Grid>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="3">
             <DataGrid x:Name="DataGridListMatches" ItemsSource="{Binding ElementName=WindowsMainPage, Path=DataContext.ListOfMatches}" AutoGenerateColumns="False">
+               
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Дата/время" Binding="{Binding DateTime, StringFormat=\{0:dd.MM.yy HH:mm\}}" />
                     <!--<DataGridTextColumn Header="Дата" Binding="{Binding Date}"/>
                     <DataGridTextColumn Header="Время" Binding="{Binding Time}"/>-->
                     <DataGridTextColumn Header="Команда" Binding="{Binding Team}"/>
                 </DataGrid.Columns>
+              
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentDay}" Value="True">
+                                <Setter Property="Background">
+                                    <Setter.Value>
+                                        <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveCaptionColorKey}}"/>
+                                    </Setter.Value>
+                                </Setter>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.RowStyle>
+                
             </DataGrid>
         </Grid>
         
